Fixed line spacing for backtrace, added blank space for empty line numbers

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -691,16 +691,23 @@ table.backtrace td {
   background-color: #222 !important;
 }
 table.backtrace ul.line-numbers li {
+  border-bottom: 0;
   text-align: right;
+  font-size: 13px;
+  line-height: 21px;
 }
+
 table.backtrace ul.lines {
   padding: 10px 8px;
   overflow: auto;
 }
-table.backtrace li {
+table.backtrace ul.lines li {
+  border-bottom: 1px solid #2B2B2B;
+  font-size: 13px;
+  line-height: 20px;
   white-space: nowrap;
 }
-table.backtrace li.in-app {
+table.backtrace ul.lines li.in-app {
   color: #2adb2e;
   background-color: #2f2f2f;
 }
